Fixed contact section overlapping issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -356,12 +356,12 @@ ul {
   //   background-color: darkgreen;
   // }
 
-  .profile,
-  .contact,
-  .projects {
-    margin: 0 6% !important;
-    height: 100vh;
-  }
+  // .profile,
+  // .contact,
+  // .projects {
+  //   margin: 0 6% !important;
+  //   height: 100vh;
+  // }
 
   .accordion-button {
     font-size: 1rem !important;
