--- a/src/index.scss
+++ b/src/index.scss
@@ -104,32 +104,32 @@ html {
   }
 }
 
-@media screen and (max-width: 980px) {
-  .home {
-    height: 100vh;
-    margin: 0 15%;
-  }
+// @media screen and (max-width: 980px) {
+//   .home {
+//     height: 100vh;
+//     margin: 0 15%;
+//   }
 
-  .profile {
-    height: 100vh;
-    margin: 0 15%;
-  }
+//   .profile {
+//     height: 100vh;
+//     margin: 0 15%;
+//   }
 
-  .work {
-    height: 100vh;
-    margin: 0 15%;
-  }
+//   .work {
+//     height: 100vh;
+//     margin: 0 15%;
+//   }
 
-  .projects {
-    height: 100vh;
-    margin: 0 15%;
-  }
+//   .projects {
+//     height: 100vh;
+//     margin: 0 15%;
+//   }
 
-  .achievements {
-    height: 100vh;
-    margin: 0 15%;
-  }
-}
+//   .achievements {
+//     height: 100vh;
+//     margin: 0 15%;
+//   }
+// }
 
 @media screen and (max-width: 376px) {
   .profile {
